...
              borderRadius: BorderRadius.circular(20.0),
              gradient: LinearGradient(
                colors: [myAppColors.primColor, myAppColors.secondaryColor],
              ),
            ),
            child: const Text(
              "Get started",
              style: TextStyle(fontSize: 18.0, color: myAppColors.darkBlack),
            ),
          ),
        ),
      ],
    );
...
              borderRadius: BorderRadius.circular(20.0),
              gradient: LinearGradient(
                colors: [myAppColors.primColor, myAppColors.secondaryColor],
              ),
            ),
            child: const Text(
              'Login',
              style: TextStyle(color: Colors.white, fontSize: 18.0),
            ),
          ),
        ),
        const SizedBox(height: 20.0),
        // Signup Option
...
