...
                    result['location'],
                    result['description'],
                  );
                }
              },
              child: Text(
                "Create Event",
                style: TextStyle(color: myAppColors.lightWhite, fontSize: 16, fontWeight: FontWeight.bold),
              ),
            ),
          ],
        ),
      ),
...
